@@ -1,3 +1,8 @@
+Thu Jun  6 12:34:13 2002  Andrew Cagney  <cagney@redhat.com>
+
+	* Makefile.in (ChangeLog): New makefile variable.
+	* README-HACKING: Mention the ChangeLog makefile variable.
+
 2002-06-01  Andrew Cagney  <ac131313@redhat.com>
 
 	* tic80/: Delete directory.
